--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ input,button,textarea,select{* font-size:100%;}
 </div>
 <div class="con clearfix">
 	<div class="news">
-		<h3>最新文章 \<a href="mob.html">M</d></h3>
+		<h3>最新文章 \<a href="mob.html">M</a></h3>
 		<div class="news-con">
 			<dl>
 				<dt><a href="" title=""><img src="images/demo.png" alt="" title=""></a></dt>
